--- a/main.css
+++ b/main.css
@@ -43,9 +43,11 @@ body,html {
     transition: all 0.5s ease-in-out;
     display: block;
     min-width: 350px;
+    outline: none;
 }
 
 .button:hover {
     transform: scale(1.02);
     cursor: pointer;
+    background-color: forestgreen;
 }
